--- a/deploy/packaging/talaria_spruce.yaml
+++ b/deploy/packaging/talaria_spruce.yaml
@@ -215,9 +215,6 @@ device:
     # (Optional) defaults to 45s
     idlePeriod: "2m"
 
-    # requestTimeout is the timeout for all inbound HTTP requests.
-    # (Optional) defaults to 30s
-    requestTimeout: "15s"
 
   # outbound handles api request to push messages to a receiver (usually caduceus).
   # defined by https://github.com/xmidt-org/talaria/blob/main/outbounder.go
@@ -304,6 +301,10 @@ inbound:
   # (Optional) defaults to no auth token
   # WARNING: This is an example auth token. DO NOT use this in production.
   authKey: (( grab $AUTH_HEADER || "dXNlcjpwYXNz" ))
+
+  # requestTimeout is the timeout for all inbound HTTP requests.
+  # (Optional) defaults to 30s
+  requestTimeout: (( grab $INBOUND_REQUEST_TIMEOUT || "15s" )) 
 
 eventMap:
   default: (( grab $CADUCEUS_ENDPOINT || "http://caduceus:6000/api/v3/notify" ))
